--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ docs/3_training_a_model_two_segments_v2.ipynb
 icon1.png
 __pycache__
 .vscode
+.pytype*
+.pytest*
 
 # prefix module with p_ to mark as private (to you)
 p_*.py 
