allow unused imports locally

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,4 +7,7 @@ extend-ignore =
     E203, 
     F403, # wildcard imports
     F405, # wildcard imports
-per-file-ignores = __init__.py:F401
+    E731, # do not assign lambda expressions
+per-file-ignores = 
+    __init__.py:F401,
+    tree.py:F401,
