--- a/setup.cfg
+++ b/setup.cfg
@@ -9,5 +9,5 @@ extend-ignore =
     F405, # wildcard imports
     E731, # do not assign lambda expressions
 per-file-ignores = 
-    __init__.py:F401,
-    tree.py:F401,
+    __init__.py:F401,tree.py:F401,types.py:F401
+    # allow unused imports locally 
