allow wildcards flag is now in files

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,7 @@ profile = black
 max-line-length = 88
 extend-ignore = 
     E203, 
-    F403, # wildcard imports
-    F405, # wildcard imports
     E731, # do not assign lambda expressions
-per-file-ignores = 
-    __init__.py:F401,tree.py:F401,types.py:F401
-    # allow unused imports locally 
+per-file-ignores =
+    __init__.py:F401
+    tree.py:F401
