--- a/pytype.cfg
+++ b/pytype.cfg
@@ -26,7 +26,7 @@ platform = linux
 
 # Paths to source code directories, separated by ':'.
 pythonpath =
-    .:./cc:./cc/rhs
+    .:./cc:./cc/examples
 
 # Python version (major.minor) of the target code.
 python_version = 3.9
