--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,5 @@ extend-ignore =
 per-file-ignores =
     __init__.py:F401
     tree.py:F401
+    # Hardcoded XML strings cannot be easily split up
+    cc/env/envs/two_segments.py:E501
