ran `run_tools.sh`

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,7 @@ profile = black
 max-line-length = 88
 extend-ignore = 
     E203, 
-    E731, # do not assign lambda expressions
+    E731,
 per-file-ignores =
-    __init__.py:F401
-    # Hardcoded XML strings cannot be easily split up
-    cc/env/envs/two_segments.py:E501
+    __init__.py:F401,
+    cc/env/envs/two_segments.py:E501,
