--- a/pytype.cfg
+++ b/pytype.cfg
@@ -7,6 +7,7 @@ exclude =
     **/*_test.py
     **/test_*.py
     **/p_*
+    cc/utils/high_level
 
 # Space-separated list of files or directories to process.
 inputs =
@@ -30,7 +31,7 @@ pythonpath =
     .:./cc:./cc/examples
 
 # Python version (major.minor) of the target code.
-python_version = 3.10
+python_version = 3.9
 
 # Use the enum overlay for more precise enum checking. This flag is temporary
 # and will be removed once this behavior is enabled by default.
