small bugfixes; changes to isort google style

--- a/pytype.cfg
+++ b/pytype.cfg
@@ -24,7 +24,7 @@ jobs = 4
 output = .pytype
 
 # Platform (e.g., "linux", "win32") that the target code runs on.
-platform = linux
+platform = mac
 
 # Paths to source code directories, separated by ':'.
 pythonpath =
